--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -49,8 +49,8 @@
                 <div class="user-spaces">
                     <p>{{ "Nom de l'annonce :" ~ " " ~ space.name }}</p>
                     <div class="show-user-annonce-btns">
-                        <a class="user-index-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
-                        <a class="user-index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
+                        <a class="user-index-submit" href="{{ path("space_show", {id: space.id}) }}">Consulter</a>
+                        <a class="user-index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier</a>
                     </div>
                     {% if space.slots is not empty %}
                     <div class="show-user-annonce-reserved">
