style admin page

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,5 +1,6 @@
 {% extends '@EasyAdmin/layout.html.twig' %}
 
+{% block content_title %}Administration{% endblock %}
 {% block content %}
 <div class="jumbotron">
 <h1 class="display-4">Admnistration<h1>
