added style if no space found

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1393,7 +1393,7 @@ input[type=range]:focus::-ms-fill-upper {
     padding: 1rem;
 
     .user-index-submit {
-        padding: 1rem;
+        padding: .8rem;
     }
 }
 
