--- a/templates/space/edit.html.twig
+++ b/templates/space/edit.html.twig
@@ -8,7 +8,7 @@
     </div>
     {{ include('space/_form.html.twig') }}
     <div class="space-form-submit-div">
-        <a class ="space-form-submit" href="{{ path("space_show", {id: space.id}) }}">Retourner sur l'annonce</a>
+        <a class ="space-form-submit" href="{{ path("space_disponibility_edit", {id: space.id}) }}">Modifier horaire de la semaine</a>
     </div>
     <div class="space-form-submit-div">
         <a class ="space-form-submit" href="{{ path("space_show", {id: space.id}) }}">Retourner sur l'annonce</a>
