changed colors underline

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -10,6 +10,7 @@ $fontworksans: Work Sans;
 $color-background-navbar: #f0f6ff;
 $color-black: #000000;
 $color-yellow: #ffff00;
+$color-grey-light-underline: #d0d0d0;
 $color-light-grey: rgb(136, 136, 136);
 $color-black-opacity: rgba(0, 0, 0, .3);
 $color-black-modal-reservation: rgba(0, 0, 0, .7);
