--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1345,7 +1345,7 @@ input[type=range]:focus::-ms-fill-upper {
     display: flex;
     margin: 1rem 2rem;
     padding-bottom: 2.5rem;
-    border-bottom: 1px solid #d0d0d0;
+    border-bottom: 1px solid $color-grey-light-underline;
 }
 
 .show-user-fullname {
@@ -1364,7 +1364,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .user-spaces {
-    border: 1px solid grey;
+    border: 1px solid $color-black;
     padding: .5rem;
     border-radius: 1rem;
     display: flex;
@@ -1373,7 +1373,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .show-user-modify {
-    border-bottom: 1px solid #d0d0d0;
+    border-bottom: 1px solid $color-grey-light-underline;
     margin: 0 2rem;
     padding-bottom: 2rem;
     text-align: center;
@@ -1412,7 +1412,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .user-index-location {
-    border-bottom: 1px solid $color-black;
+    border-bottom: 1px solid $color-grey-light-underline;
     margin: 1rem 2rem
 }
 
