--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -43,7 +43,7 @@
 								<label for="storage">Espace de stockage</label>
 
 								<input type="checkbox" name="plate" id="plate" class="hidden-checkbox" hidden>
-								<label for="plateau">Plateaux vides</label>
+								<label for="plate">Plateaux vides</label>
 							</div>
 							<div class="filter-range">
 								<label for="job">Profession recherchée</label>
