i change the favicone

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -75,7 +75,7 @@
 	<h4 class="testimony-title">Ils en parlent</h1>
 	<div class="testimony-text">
 		<div class="marks-image-top"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
-		<p class="p-testimony">Marché Conclu a résolu mon probleme d'espace pour reloger des clients et faire face en toute sérénité aux retards sur mes chantiers.</p>
+		<p class="p-testimony">Marché Conclu a résolu mon problème d'espace pour reloger des clients et faire face en toute sérénité aux retards sur mes chantiers.</p>
 		<div class="marks-image-bottom"><img src="{{ asset('build/images/mark2.png') }}" alt="marks"/></div>
 	</div>
 	<div class="testimony-autor">
@@ -94,7 +94,7 @@
 		<img src="{{ asset('build/images/axa.png') }}" alt="axa-logo"/>
 	</div>
 	<div class="partner-text">
-		<p class="partner-info">Pour vous assurer une expérience toujours plus simple et sécurisé, nous avons travaillé avec nos partnaires a devolopper des outils pour vous accompagner avec toujours plus de flexibilité dans votre location ou gestion de vos espaces de travail.</p>
+		<p class="partner-info">Pour vous assurer une expérience toujours plus simple et sécurisé, nous avons travaillé avec nos partenaires a developper des outils pour vous accompagner avec toujours plus de flexibilité dans la location ou gestion de vos espaces de travail.</p>
 	</div>
 </div>
 {# FOOTER #}
