--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -21,7 +21,7 @@
 				{# If you want to control the URL the user is redirected to on success
 								        <input type="hidden" name="_target_path" value="/account"/> #}
 				<div class="loginorregister">
-					<button class="submit-login" type="submit">Connexion</button>
+					<button class="user-index-submit" type="submit">Connexion</button>
 					<a class="registeryou" href="{{ path('app_register') }}">Créer un compte</a>
 				</div>
 			</form>
