--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -11,6 +11,6 @@
         {{ form_row(form.phone_number) }}
         {{ form_row(form.job) }}
         {{ form_row(form.photoFile, {'attr': {'class': 'space-form-content'}}) }}
-        {{ form_row(form.enregistrer, {'attr': {'class': 'user-form-enregistrer'}}) }}
+        {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit registerButton', 'margin': 'auto'}}) }}
     {{ form_end(form) }}
 </div>
