style submit message button

--- a/templates/message/__form.html.twig
+++ b/templates/message/__form.html.twig
@@ -1,5 +1,5 @@
 	{{ form_start(form) }}
     {{ form_row(form.title, {'label': 'Sujet du message'}) }}
     {{ form_row(form.message, {'label': 'Contenu'}) }}
-    {{ form_row(form.envoyer, {'label': 'Envoyer'}) }}
+    {{ form_row(form.envoyer, {'attr': {'class': 'user-index-submit'}}) }}
     {{ form_end(form) }}
