--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -61,9 +61,9 @@
 <div class="show-space-availability">
 	<div class="show-space-availability-week">
 	<div class="show-space-day">
-	{% if disponibility.monday %}
+	{% if space.spacedisponibility.monday %}
 		<div class="day-letter">L</div>
-		<div class="day-hours">{{ disponibility.monday }}</div>
+		<div class="day-hours">{{ space.spacedisponibility.monday }}</div>
 	{% else %}
 		<div class="day-letter-disabled">L</div>
 	{% endif %}
@@ -77,9 +77,9 @@
 		{% endif %}
 			</div>
 			<div class="show-space-day">
-			{% if disponibility.wednesday %}
+			{% if space.spacedisponibility.wednesday %}
 				<div class="day-letter">M</div>
-				<div class="day-hours">{{ disponibility.wednesday }}</div>
+				<div class="day-hours">{{ space.spacedisponibility.wednesday }}</div>
 			{% else %}
 				<div class="day-letter-disabled">M</div>
 			{% endif %}
@@ -93,25 +93,25 @@
 		{% endif %}
 			</div>
 			<div class="show-space-day">
-		{% if disponibility.friday %}
+		{% if space.spacedisponibility.friday %}
 			<div class="day-letter">V</div>
-			<div class="day-hours">{{ disponibility.friday }}</div>
+			<div class="day-hours">{{ space.spacedisponibility.friday }}</div>
 		{% else %}
 			<div class="day-letter-disabled">V</div>
 		{% endif %}
 			</div>
 			<div class="show-space-day">
-			{% if disponibility.saturday %}
+			{% if space.spacedisponibility.saturday %}
 				<div class="day-letter">S</div>
-				<div class="day-hours">{{ disponibility.saturday }}</div>
+				<div class="day-hours">{{ space.spacedisponibility.saturday }}</div>
 			{% else %}
 				<div class="day-letter-disabled">S</div>
 			{% endif %}
 				</div>
 				<div class="show-space-day">
-				{% if disponibility.sunday %}
+				{% if space.spacedisponibility.sunday %}
 					<div class="day-letter">D</div>
-					<div class="day-hours">{{ disponibility.sunday }}</div>
+					<div class="day-hours">{{ space.spacedisponibility.sunday }}</div>
 				{% else %}
 					<div class="day-letter-disabled">D</div>
 				{% endif %}
