--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -394,6 +394,10 @@ a {
         a:hover {
             color: $color-black;
         }
+        
+        li {
+            list-style-type: none;
+        }
     }
 }
 
