--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="show-user-secondary-datas">
-            <div class="show-user-contacts"
+            <div class="show-user-contacts">
         <div class="show-user-annonce-btns">
                 <a class="user-index-submit text-center" href="{{ path("send", {slug: user.slug}) }}">📧 Envoyer un message </a>
         </div>
